fix: add padding on small screen

--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@
 }
 
 .section {
-  @apply mx-auto md:max-w-[720px] lg:max-w-[840px] xl:max-w-[960px];
+  @apply mx-auto px-5 md:px-0 md:max-w-[720px] lg:max-w-[840px] xl:max-w-[960px];
 }
 
 .swiper {
